# pubchem-cid4-analysis

./: .editorconfig  .gitignore  README.md
cid4-age/: README.md  pyproject.toml
cid4-angular-ui/: .prettierignore  README.md  angular.json  eslint.config.js  package-lock.json  package.json
cid4-asyncio-api/: .gitignore  README.md  pyproject.toml
cid4-boost-asio-server/: CMakeLists.txt  vcpkg.json
cid4-boost-asio-server/src/: cid4_http.hpp  main.cpp
cid4-crow-server/: CMakeLists.txt  README.md  vcpkg.json
cid4-crypto/: README.md  pyproject.toml
cid4-crypto/src/: asymmetric.py  certificates.py  hashing.py  main.py  passwords.py  symmetric.py
cid4-crypto/tests/: test_main.py
cid4-cuda/: CMakeLists.txt  vcpkg.json
cid4-cuda/src/: cid4_cuda_runtime.cu  cuda_app.cpp
cid4-drogon-server/: CMakeLists.txt  vcpkg.json
cid4-express-api/: package-lock.json  package.json  tsconfig.json
cid4-fastapi/: .gitignore  README.md  pyproject.toml  setup.sh
cid4-fastapi/src/: cid4_analysis.py  cid4_api.py  cid4_fastapi.py  cid4_mcp.py  cid4_ml.py  cid4_observability.py  storage.py  text_processing.py
cid4-fastapi/src/fastapi_cid4/: config.py  routes.py  security.py
cid4-fastapi/src/langchain_cid4/: __init__.py  documents.py  retrieval.py  workflows.py
cid4-fastapi/src/langgraph_cid4/: state.py  workflows.py
cid4-fastapi/src/mcp_cid4/: __init__.py  server.py  stdio_client.py
cid4-fastapi/src/ml/: common.py  datasets.py  language_model_common.py  scaffold_workflows.py  sklearn_workflows.py  tensorflow_language_model.py  tensorflow_workflows.py  torch_language_model.py  torch_workflows.py  xgboost_workflows.py
cid4-fastapi/tests/: test_cid4_api.py  test_fastapi_server.py  test_langchain_workflows.py  test_langgraph_workflows.py  test_xgboost_workflows.py
cid4-flask-api/: .gitignore  README.md  pyproject.toml
cid4-flask-api/src/: cid4_api.py  config.py  main.py  observability.py  routes.py
cid4-flask-api/tests/: test_main.py
cid4-nest-api/: package-lock.json  package.json  tsconfig.json
cid4-nltk/: README.md  pyproject.toml
cid4-oatpp-server/: CMakeLists.txt  README.md  vcpkg.json
cid4-oatpp-server/src/: app_utils.cpp  app_utils.hpp  cid4_http.cpp  cid4_http.hpp  main.cpp  observability.cpp  observability.hpp
cid4-opencv/: CMakeLists.txt  vcpkg.json
cid4-opencv/src/: cid4_scene.cpp  cid4_scene.hpp  main.cpp
cid4-opencv/test/: opencv_support_test.cpp
cid4-opengl/: CMakeLists.txt  build.sh  vcpkg.json
cid4-opengl/src/: cid4_opengl.cpp
cid4-pgvector/: .editorconfig  README.md  pyproject.toml
cid4-plain-openssl-server/: CMakeLists.txt  README.md
cid4-pytorch/: Dockerfile  README.md  pyproject.toml
cid4-pytorch/src/: atom_element_multiclass_classification.ipynb  bioactivity_binary_classification.ipynb  heavy_atom_vs_hydrogen_classification.ipynb  linear_regression.ipynb
cid4-starlette-api/: README.md  pyproject.toml
cid4-tensorflow/: Dockerfile  README.md  pyproject.toml
cid4-tensorflow/src/: cid4_analysis.py  common.py  datasets.py  tensorflow_workflows.py
cid4-ui/: .prettierrc  README.md  jest.config.ts  package-lock.json  package.json
cid4-vulkan/: CMakeLists.txt
cid4-vulkan/src/: cid4_vulkan.cpp
cpp/: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  build.sh  vcpkg.json
cpp/src/: analysis.cpp  analysis.hpp  app.cpp  cid4_cuda_buffers.cpp  cid4_cuda_buffers.hpp  cid4_cuda_runtime.hpp  cid4_http.cpp  cid4_http.hpp  cid4_observability.cpp  cid4_observability.hpp  cid4_opencv.cpp  cid4_opencv.hpp  crow_api_server.cpp  drogon_api_server.cpp  oat_api_server.cpp  opengl_app.cpp  plain_openssl_api_server.cpp  vulkan_app.cpp
cpp/test/: analysis_test.cpp  cid4_http_test.cpp  cuda_buffers_test.cpp  sample_test.cpp
data/: BIOASSAY_AID_743069.json  COMPOUND_CID_4.json  Chemical_Co-Occurrences-in-Patents_CID_4.asnt  (+65 more)
py/: .gitignore  Dockerfile  README.md  db-helper.sh  pyproject.toml  setup.sh
py/src/: __init__.py  cid4_age.py  cid4_analysis.ipynb  cid4_analysis.py  cid4_api.py  cid4_asyncio.py  cid4_crypto.py  cid4_fastapi.py  cid4_flask.py  cid4_langchain.py  cid4_langgraph.py  cid4_mcp.py  cid4_ml.py  cid4_ml_taxonomy_text_baseline.ipynb  cid4_nltk.py  cid4_pgvector.py  cid4_quantum.py  cid4_starlette.py  documents.py  embedding.py  env_utils.py  img_pytorch_model.ipynb  log_settings.py  matplotlib_utils.py
py/src/age_cid4/: __init__.py  graphs.py  queries.py  storage.py
py/src/age_graph/: cid4_analysis.py  graphs.py  main.py  queries.py  storage.py
py/src/crypto_cid4/: __init__.py  asymmetric.py  certificates.py  passwords.py  symmetric.py
py/src/fastapi_cid4/: __init__.py  app.py  config.py  routes.py  security.py
py/src/flask_cid4/: __init__.py  app.py  routes.py
py/src/langchain_cid4/: documents.py  retrieval.py
py/src/langgraph_cid4/: __init__.py  state.py
py/src/ml/: __init__.py  cid4_ml.ipynb  cid4_ml_scikit_learn.ipynb  common.py  datasets.py  sklearn_workflows.py  tensorflow_language_model.py  tensorflow_workflows.py  torch_workflows.py  xgboost_workflows.py
py/src/nlp/: __init__.py  datasets.py  nltk_workflows.py
py/src/nltk/: datasets.py  fs_utils.py  logging.json  main.py  nltk_workflows.py  text_processing.py
py/src/pgvector/: __init__.py  datasets.py  documents.py  embedding.py  main.py  storage.py
py/src/starlette_cid4/: __init__.py  app.py  routes.py
py/src/tf/: cid4_analysis.py  cid4_ml.ipynb  common.py  datasets.py  log_settings.py  tensorflow_workflows.py
py/src/tf/utils/: fs_utils.py
py/src/torch/: atom_element_multiclass_classification.ipynb  bioactivity_binary_classification.ipynb  heavy_atom_vs_hydrogen_classification.ipynb  linear_regression.ipynb
py/src/utils/: fs_utils.py  number_utils.py  text_utils.py
py/tests/: test_age_graphs.py  test_age_storage.py  test_asyncio_server.py  test_cid4_quantum.py  test_crypto_workflows.py  test_documents.py  test_fastapi_server.py  test_flask_server.py  test_langchain_workflows.py  test_nltk_workflows.py  test_pgvector_documents.py  test_pgvector_storage.py  test_starlette_server.py  test_storage.py  test_xgboost_workflows.py
(+207 files in other folders)
