[project]
name = "cid4-tensorflow"
version = "1.0.0"
description = "Tensorflow models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "tensorflow>=2.21.0", # https://pypi.org/project/tensorflow/
    "rdkit>=2025.9", # https://pypi.org/project/rdkit/
    "numpy>=2.4.4", # https://pypi.org/project/numpy/
    "pandas>=2.3.3",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
]
