[project]
name = "pubchem-cid4-analysis"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy==2.4.4",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "rdkit>=2025.3.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]

[project.optional-dependencies]
crypto = [
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.2.0",
    "cryptography>=45.0.0",
]
descriptor-ml = [
    "dscribe>=2.1.1",
]
fastapi = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "prometheus-client>=0.22.1",
    "uvicorn>=0.35.0",
]
mcp = [
    "mcp[cli]>=1.27.0",
]
langgraph = [
    "langgraph>=0.4.7",
]
langchain = [
    "langchain>=0.3.27",
    "langchain-text-splitters>=0.3.11",
]
nltk = [
    "nltk>=3.9.1",
]
pgvector = [
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
]
xgboost = [
    "xgboost>=2.1.4",
]
chem-tools = [
    "deepchem>=2.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
deep-learning = [
    "tensorflow>=2.21.0",
    "torch",
    "torchvision",
]

[tool.ruff]
line-length = 120
# Exclude specific files or directories from linting
exclude = []

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []
