[project]
name = "pubchem-cid4-analysis"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy<2.1.0",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "rdkit<=2025.9.3",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 120
# Exclude specific files or directories from linting
exclude = []

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []
